generalHello/src/main/istio/dest-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: greetandweather-service
spec:
    host: greetandweather-service.greet-ns.svc.cluster.local
    subsets:
    - name: v1 
      labels:
        version: v1
