generalHello/src/main/istio/greeter-weather-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greetandweather-service 
spec:
  gateways:
  - gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: "/greet"
    route:
    - destination:
        host: greetandweather-service
        subset: v1 
        port:
          number: 3000
